// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmplifyUi test render ActionRow correctly 1`] = `
<div
  className="amplify-action-row"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Button correctly 1`] = `
<button
  className="amplify-button"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</button>
`;

exports[`AmplifyUi test render ButtonContent correctly 1`] = `
<span
  className="amplify-button-content"
/>
`;

exports[`AmplifyUi test render ButtonRow correctly 1`] = `
<div
  className="amplify-action-row"
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render Checkbox correctly 1`] = `
<input
  className="amplify-checkbox"
  style={Object {}}
  type="checkbox"
/>
`;

exports[`AmplifyUi test render CheckboxRow correctly 1`] = `
<Component
  theme="theme"
>
  <Component
    id="_undefined"
    theme="theme"
  />
  <Component
    htmlFor="_undefined"
    theme="theme"
  />
</Component>
`;

exports[`AmplifyUi test render Container correctly 1`] = `
<div
  className="amplify-container"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render ErrorSection correctly 1`] = `
<div
  className="amplify-error-section"
  style={Object {}}
>
  <Component />
</div>
`;

exports[`AmplifyUi test render FormContainer correctly 1`] = `
<div
  className="amplify-form-container"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render FormRow correctly 1`] = `
<div
  className="amplify-form-row"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render FormSection correctly 1`] = `
<Component
  theme="theme"
>
  <div
    className="amplify-form-section"
    style={Object {}}
  />
</Component>
`;

exports[`AmplifyUi test render InputRow correctly 1`] = `
<Component
  theme="theme"
>
  <input
    className="amplify-input"
    style={Object {}}
  />
</Component>
`;

exports[`AmplifyUi test render Label correctly 1`] = `
<label
  className="amplify-label"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Link correctly 1`] = `
<a
  className="amplify-a"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render MessageRow correctly 1`] = `
<Component
  theme="theme"
>
  <Component
    theme="theme"
  />
</Component>
`;

exports[`AmplifyUi test render Nav correctly 1`] = `
<div
  className="amplify-nav"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render NavBar correctly 1`] = `
<div
  className="amplify-nav-bar"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render NavButton correctly 1`] = `
<button
  className="amplify-nav-button"
  style={Object {}}
>
  <span />
</button>
`;

exports[`AmplifyUi test render NavItem correctly 1`] = `
<div
  className="amplify-nav-item"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render NavRight correctly 1`] = `
<div
  className="amplify-nav-right"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Radio correctly 1`] = `
<input
  className="amplify-radio"
  style={Object {}}
  type="radio"
/>
`;

exports[`AmplifyUi test render RadioRow correctly 1`] = `
<Component
  theme="theme"
>
  <Component
    id="_undefined"
    theme="theme"
  />
  <Component
    htmlFor="_undefined"
    theme="theme"
  />
</Component>
`;

exports[`AmplifyUi test render SectionBody correctly 1`] = `
<div
  className="amplify-section-body"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooter correctly 1`] = `
<div
  className="amplify-section-footer"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render SectionFooterContent correctly 1`] = `
<span
  className="amplify-section-footer-content"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionHeader correctly 1`] = `
<div
  className="amplify-section-header"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render SectionHeaderContent correctly 1`] = `
<span
  className="amplify-section-header-content"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SignInButton correctly 1`] = `
<button
  className="amplify-signin-button"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Space correctly 1`] = `
<span
  className="amplify-space"
  style={Object {}}
/>
`;